[package]
name = "tzst-gui"
version = "1.0.0"
description = "Cross-platform GUI for tzst archive management"
authors = ["tzst contributors"]
license = "BSD-3-Clause"
repository = "https://github.com/xixu-me/tzst"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "7.0"
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
